Prevent elements from overlapping

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,7 +17,7 @@ body{
 }
 
 .main{
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
